# OuroborosWithLove

./: BIBLE.md  README.md  colab_bootstrap_shim.py  colab_launcher.py  pyproject.toml  requirements.txt
notebooks/: quickstart.ipynb
ouroboros/: agent.py  consciousness.py  context.py  llm.py  loop.py  review.py  svg_delivery.py  tool_routing.py
ouroboros/tools/: control.py  core.py  credit.py  documents.py  git.py  hr.py  pdf_editing.py  polls.py  presentation_editing.py  presentation_exports.py  presentation_images.py  presentation_visuals.py  presentations.py  registry.py  review.py  shell.py  spreadsheets.py  team.py  tool_discovery.py  vision.py  word_editing.py
prompts/: CREDIT_COMMITTEE_PLAYBOOK.md  HR_HIRING_PLAYBOOK.md  SYSTEM.md
supervisor/: access_control.py  commands.py  events.py  git_ops.py  polls.py  queue.py  state.py  teamchat.py  teams.py  telegram.py  telegram_images.py  transcription.py  unresolved_tasks.py  users.py  watchdog.py  workers.py
tests/: test_access_control.py  test_documents_tool.py  test_domain_tools.py  test_file_delivery.py  test_gigachat_tool_calls.py  test_improvement_requests.py  test_llm_provider.py  test_message_routing.py  test_multi_user.py  test_pdf_editing_tool.py  test_presentations_tool.py  test_smoke.py  test_spreadsheets_tool.py  test_supervisor_commands.py  test_svg_delivery.py  test_team_chats.py  test_telegram_documents.py  test_tool_packs.py  test_transcription.py  test_vision.py  test_word_editing_tool.py
